--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,27 @@ dependencies:
 
   # It's a good idea to also add any other Firebase packages you'll need
   # For example:
-  # firebase_auth: ^5.1.1
-  # cloud_firestore: ^5.0.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5
+  path_provider: ^2.1.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+
 
 dev_dependencies:
+
+  build_runner: ^2.4.9
+  freezed: ^2.4.7
+  json_serializable: ^6.9.5
+
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
