--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   path_provider: ^2.1.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  flutter_quill: ^11.0.0-dev.15
+  flutter_quill_extensions: ^11.0.0-dev.15
+
 
 
 dev_dependencies:
