Continuing to my work on UI on profile screen, friend screen, home screen, letterbox screen, and write letter screen. Implemented more logic.
The write letter screen part remains unfinished. I hope I'll return to it soon. The state of the project is extremely worrying as of now, and we need to hurry.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_quill: ^11.0.0-dev.15
   flutter_quill_extensions: ^11.0.0-dev.15
-
+  lottie: ^3.0.0
 
 
 dev_dependencies:
@@ -82,6 +82,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/fonts/
+    - assets/textures/
+    - assets/images_animations/
   fonts:
     - family: GreatVibes
       fonts:
