--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   build_runner: ^2.4.9
   freezed: ^2.4.7
   json_serializable: ^6.9.5
+  flutter_riverpod: ^3.0.3
 
   flutter_test:
     sdk: flutter
