--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # For example:
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,8 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
-  flutter_quill: ^11.0.0-dev.15
-  flutter_quill_extensions: ^11.0.0-dev.15
+  html_editor_enhanced: ^2.5.1
   lottie: ^3.0.0
 
 
