--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  flutter_html: ^3.0.0-beta.2
   html_editor_enhanced: ^2.5.1
   lottie: ^3.0.0
 
